fix: isBlank is not available on Java 8